--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@
                 </nav>
             </div>
         </div>
-        <div class="row text-center" id="home-section" data-aos="fade-up" data-aos-duration="5000">
+        <div class="row text-center" id="home-section">
             <div class="col-md-2"></div>
             <div class="col-md-8">
                 <h1 id="element">Hello, my name is Kamdem i'm a Fullstack web developper.</h1>
-                <h6 class="p-5">
+                <h6 class="p-5" data-aos="fade-right" data-aos-duration="3000">
                     👋 Salut et bienvenue sur mon portfolio !
                     💻 Je suis un développeur passionné par le web et les applications modernes.
                     🚀 J’aime transformer des idées en projets interactifs et performants.
                     🎨 Mon objectif : allier design, technologie et expérience utilisateur.
                     📩 Découvre mes projets et n’hésite pas à me contacter !
                 </h6> 
-                <div class="btn-homesection">
+                <div class="btn-homesection" data-aos="fade-left" data-aos-duration="3000">
                     <a href="#projects">View projects <i class="fa-solid fa-briefcase"></i></a> 
                     <a href="#contact-section">Contact me now <i class="fa-solid fa-phone"></i></a>
                 </div>
@@ -72,7 +72,7 @@
                     <p><i class="fa-solid fa-phone"></i> Tel : +237-691-362-532</p><br>
                     <p><i class="fa-solid fa-envelope"></i> Email : Kamdembrice770@gmail.com</p><br>
                     <p>
-                        <i class="fa-2x fab fa-instagram"></i>
+                        <i class="fa-2x fab fa-whatsapp"></i>
                         <i class="fa-2x fab fa-telegram"></i>
                         <i class="fa-2x fab fa-x-twitter"></i>
                         <i class="fa-2x fab fa-youtube"></i>
@@ -84,9 +84,9 @@
                 <div class="col-md-6" id="aboutme-text">
                     <div class="titre mt-5">
                         <i class="fa-solid fa-user" id="icone-titre"></i>
-                        <h2 data-aos="fade-up">ABOUT ME</h2>
+                        <h2>ABOUT ME</h2>
                     </div>
-                    <p class="description">
+                    <p class="description" data-aos="fade-up" data-aos-duration="3000">
                         Je m’appelle Kamdem Brice 🔥, passionné par le développement web et les technologies modernes.
                         Actuellement, je me spécialise dans le backend avec Django, tout en maîtrisant HTML, CSS, Bootstrap et PostgreSQL.
                         Mon parcours universitaire en histoire m’a appris la rigueur 😎, l’esprit critique et la curiosité intellectuelle.
@@ -104,7 +104,7 @@
                     <div class="titre mt-5"><i class="fa-solid fa-gear" id="icone-titre"></i>
                         <h2>SKILLS</h2>
                     </div>
-                    <div class="languages mt-2">
+                    <div class="languages mt-2" data-aos="fade-up" data-aos-duration="3000">
                         <p>
                             <i class="fa-2x fab fa-html5"></i>
                             <i class="fa-2x fab fa-css3-alt"></i>
@@ -146,7 +146,7 @@
                     <h3>< All my tools /></h3>
                 </div>
             </div>
-            <div class="row text-center mt-4">
+            <div class="row text-center mt-4" data-aos="fade-up" data-aos-duration="3000">
                 <div class="col-md-12">
                     <img src="images/html2.png">
                     <img src="images/css.png">
@@ -161,15 +161,15 @@
                 </div>
             </div>
         </div>
-        <div class="row" id="projects" data-aos="fade-up" data-aos-duration="5000">
-            <div class="col-md-12 text-center">
+        <div class="row" id="projects">
+            <div class="col-md-12 text-center" data-aos="fade-up" data-aos-duration="3000">
                 <h1>PROJECTS SHOWCASE 😎</h1><br>
                 <h6>Explore a selection of projects demonstrating expertise in Django, 
                     JavaScript, and Bootstrap, with a focus on innovative solutions and 
                     user-centric design.</h6>
             </div>
             <div class="row mt-5">
-                <div class="col-md-4 col-sm-6 text-center mb-2">
+                <div class="col-md-4 col-sm-6 text-center mb-2" data-aos="fade-left" data-aos-duration="3000">
                     <div class="card p-3">
                         <div class="card-img-top"><img src="images/projet1.JPG" class="img-fluid"></div>
                         <div class="card-title mt-4"><h5>Dynamic Web Application - Kama.blog</h5></div>
@@ -181,7 +181,7 @@
                         <div class="btn-project"><button id="btn1">Live demo <i class="fas fa-arrow-right"></i></button><button id="btn2">Code</button></div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 text-center mb-2">
+                <div class="col-md-4 col-sm-6 text-center mb-2" data-aos="fade-up" data-aos-duration="3000">
                     <div class="card p-3">
                         <div class="card-img-top"><img src="images/projet2.JPG" class="img-fluid"></div>
                         <div class="card-title mt-4"><h5>Web Application Pdf Listener - YOouk</h5></div>
@@ -193,7 +193,7 @@
                         <div class="btn-project"><button id="btn1">Live demo <i class="fas fa-arrow-right"></i></button><button id="btn2">Code</button></div>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 text-center">
+                <div class="col-md-4 col-sm-6 text-center" data-aos="fade-right" data-aos-duration="3000">
                     <div class="card p-3">
                         <div class="card-img-top"><img src="images/figma.jfif" class="img-fluid"></div>
                         <div class="card-title mt-4"><h5>Drawing arts presentation</h5></div>
@@ -207,9 +207,9 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid text-center" id="contact-section" data-aos="fade-right" data-aos-duration="3000">
+        <div class="container-fluid text-center" id="contact-section" >
             <div class="row">
-                <div class="col-md-7 col-sm-12">
+                <div class="col-md-7 col-sm-12" data-aos="fade-left" data-aos-duration="3000">
                     <h1>CONTACT ME NOW !🧠</h1>
                     <br>
                     <p>I'm always open to discussing new projects,
@@ -223,21 +223,21 @@
                         <button type="submit">Send Message</button>
                     </form>
                 </div>
-                <div class="col-md-5 col-sm-12">
+                <div class="col-md-5 col-sm-12" data-aos="fade-right" data-aos-duration="3000">
                     <!-- Google Maps iframe pour Yaoundé, Cameroun -->
                     <iframe src="https://www.google.com/maps?q=Yaound%C3%A9,+Cameroun&hl=fr&z=14&output=embed" width="100%" height="464" allowfullscreen="" ></iframe>
                 </div>
             </div>
         </div>
-        <div class="row" id="footer" data-aos="fade-down" data-aos-duration="3000">
-            <div class="col-md-4 col-sm-4 text-center" id="num-footer">
+        <div class="row" id="footer">
+            <div class="col-md-4 col-sm-4 text-center" id="num-footer" data-aos="fade-up" data-aos-duration="3000">
                 <h5>Information</h5>
                 <hr>
                 <p>Kamdem Brice emmanuel</p>
                 <p>+237-691-362-532</p>
                 <p>Kamdembrice770@gmail.com</p>
             </div>
-            <div class="col-md-4 col-sm-4 text-center mb-3" id="links-footer">
+            <div class="col-md-4 col-sm-4 text-center mb-3" id="links-footer" data-aos="fade-right" data-aos-duration="3000">
                 <h5>Liens rapides</h5>
                 <hr>
                 <a href="#aboutme">About me</a>
@@ -245,7 +245,7 @@
                 <a href="#projects">Projects</a>
                 <a href="#contact-section">Contact</a>
             </div>
-            <div class="col-md-4 col-sm-4 text-center mb-4" id="social-network">
+            <div class="col-md-4 col-sm-4 text-center mb-4" id="social-network" data-aos="fade-up" data-aos-duration="3000">
                 <h5>My social networks</h5>
                 <hr>
                 <a href=""><i class="fa-2x fab fa-x-twitter"></i></a>
@@ -264,6 +264,8 @@
             <h6 class="text-center">&copy; Tous droits réservés.kamdem Brice 2025.</h6>
         </div>
     </div>
+    <!-- Bouton retour en haut -->
+    <button onclick="topFunction()" id="btnTop" title="Retour en haut"><i class="fa-solid fa-arrow-up"></i></button>
     <script>
         AOS.init();
     </script>
@@ -274,4 +276,5 @@
 <!--typeit js -->
 <script src="https://unpkg.com/typeit@8.8.7/dist/index.umd.js" defer></script>
 <script src="script.js" defer></script>
+
 </html>
